--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,15 @@ environment:
 dependencies:
   bloc: ^8.1.3
   chewie: ^1.7.5
+  cloud_firestore: ^4.14.0
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   equatable: ^2.0.5
   file_picker: ^6.2.0
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.24.2
+  firebase_storage: ^11.6.0
+  firebase_ui_auth: ^1.7.0
   flutter:
     sdk: flutter 
   flutter_bloc: ^8.1.4
@@ -26,7 +31,7 @@ dependencies:
   get_it: ^7.6.7
   iconly: ^1.0.1
   image_picker: ^1.0.7
-  intl: ^0.19.0
+  intl: ^0.18.0
   lottie: ^2.6.0
   open_file: ^3.3.2
   path_provider: ^2.1.2
