--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   dartz: ^0.10.1
   equatable: ^2.0.5
   file_picker: ^6.2.0
-  firebase_auth: ^4.16.0
+  firebase_auth: 4.12.0
   firebase_core: ^2.24.2
   firebase_storage: ^11.6.0
   firebase_ui_auth: ^1.7.0
