feat: added nested navigation for home screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   swipe_to: ^1.0.6
   url_launcher: ^6.1.14
+  uuid: ^4.2.2
   video_thumbnail: ^0.5.3
   youtube_metadata: ^1.0.1
   
