--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter  
+  google_sign_in_mocks: ^0.3.0
   mocktail: ^1.0.3
   very_good_analysis: ^5.1.0
 
